--- a/themes/arknights/source/css/sass/_base_style.sass
+++ b/themes/arknights/source/css/sass/_base_style.sass
@@ -28,7 +28,7 @@ body
   background-position: 50% 40px
   background-repeat: no-repeat
   background-size: cover
-  font-family: "JetBrains Mono", sans-serif
+  font-family: "JetBrains Mono", 'Microsoft YaHei', '\5b8b\4f53', sans-serif
   display: flex
   flex-direction: column
   align-items: stretch
@@ -66,6 +66,12 @@ kbd
   border-radius: 2px
   padding: 0 3px
   font-family: "JetBrains Mono"
+
+em
+  font-family: Times, "Times New Roman", 'FangSong', 'SimSun', serif
+
+strong, em
+  color: #fff
 
 strong em
   color: rgb(236, 48, 0)
