--- a/themes/arknights/source/css/sass/_base_style.sass
+++ b/themes/arknights/source/css/sass/_base_style.sass
@@ -69,12 +69,11 @@ kbd
 
 em
   font-family: Times, "Times New Roman", 'FangSong', 'SimSun', serif
-
 strong, em
   color: #fff
-
-strong em
-  color: rgb(236, 48, 0)
+strong em, em strong
+  font-family: "JetBrains Mono", 'Microsoft YaHei', '\5b8b\4f53', sans-serif
+  color: #C0392B
 
 blockquote
   border-left: #2bf solid 5px
