--- a/themes/arknights/source/css/sass/_class_style.sass
+++ b/themes/arknights/source/css/sass/_class_style.sass
@@ -1,8 +1,8 @@
 // ========= 类样式
 // ====== class style
 .text-title, .text-content
-  height: 150%
-  line-height: 150%
+  height: 18px
+  line-height: 18px
   color: #000
   padding: 0 5px
   font-size: small
