--- a/themes/arknights/sass/sass/_class_style.sass
+++ b/themes/arknights/sass/sass/_class_style.sass
@@ -99,3 +99,8 @@
   padding: 3px 6px
   color: #fff
   background-color: #494949
+
+.mermaid
+  margin: 10px 0
+  padding: 10px
+  text-align: center
